src/objects/SPE_CategoryInfo__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Business Role</label>
        <picklist>
            <picklistValues>
                <fullName>Category Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Category Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Manager</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CategoryMaster</label>
        <referenceTo>SPE_CategoryMaster__c</referenceTo>
        <relationshipName>Categories_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryScopeCombination__c</fullName>
        <label>Category Scope Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Categories_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>All Category Groups</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D and IT Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing and Manufacturing Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard and Interconnect Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics &amp; RF Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF &amp; Custom Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems and Embedded Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Workforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting MS, NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting NI Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW &amp; Care Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair &amp; Spares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basestation Antennas &amp; IBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnering Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenditures reported erroneously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-managed expenditures</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Master</label>
        <referenceTo>SPE_BUBL__c</referenceTo>
        <relationshipName>Categories_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Master</label>
        <referenceTo>SPE_ProjectMaster__c</referenceTo>
        <relationshipName>Categories_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Categories_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Role__c</fullName>
        <label>System Role</label>
        <picklist>
            <picklistValues>
                <fullName>Developed Ticket Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase Out Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI Uploader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scorecard Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey Respondent</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>18 digit ID</label>
        <type>Text</type>
    </fields>
    <label>Scope Tag</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Category Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scope Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>